--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,16 +1,18 @@
-<div id="form">
-   <h2>Signup</h2>
-   <form action="/signup" method="POST">
+<form class="signup-form" action="/signup" method="POST">
+   <h1>{{title}} <a href="/deafAF" style="text-decoration: none;">🤟</a></h1>
+   <div>
       <label for="input-username">Username</label>
       <input type="text" id="input-username" name="username" placeholder="Your Username" />
+   </div>
 
+   <div>
       <label for="input-password">Password</label>
       <input type="password" id="input-password" name="password" placeholder="********">
+   </div>
 
-      <button type="submit">Create Account</button>
+   <button type="submit">Create Account</button>
 
-      {{#if errorMessage}}
-      <p class="error">{{errorMessage}}</p>
-      {{/if}}
-   </form>
-</div>
+   {{#if errorMessage}}
+   <p class="error">{{errorMessage}}</p>
+   {{/if}}
+</form>
