--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,25 +10,14 @@
 </head>
 
 <body>
-   <nav>
-      <div>
-         <ul id="navbar">
-            <li><a href="/home">Home Page</a></li>
-            <nav class="navbar navbar-default">
-               <div class="container-fluid">
-                  <ul class="nav navbar-nav navbar-right">
-                     <li><a href="/">Home Page</a></li>
-                     <li><a href="/logout">Logout</a></li>
-                     <li><a href="/login">Login</a></li>
-                     <li><a href="/signup">Sign Up</a></li>
-                     <li><a href="/profile">My Profile</a></li>
-                     <li><a href="/logout">Logout</a></li>
-                  </ul>
-               </div>
-            </nav>
-            {{{body}}}
-
-            <script src="/js/script.js"></script>
+   <nav class="navbar">
+      <ul>
+         <li><a href="/logout">Logout</a></li>
+         <li><a href="/login">Login</a></li>
+      </ul>
+   </nav>
+   {{{body}}}
+   <script src="/js/script.js"></script>
 </body>
 
 </html>
