--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,11 +1,15 @@
-<div id="form">
-   <h2>login</h2>
-   <form action="/login" method="POST">
-      <label for="input-username">Username</label>
-      <input type="username" id="input-username" name="username" placeholder="Your Username" />
+<div class="login-page">
+   <h1>{{title}} <a href="/deafAF" style="text-decoration: none;">🤟</a></h1>
+   <form class="login-form" action="/login" method="POST">
+      <div>
+         <label for="input-username">Username</label>
+         <input type="username" id="input-username" name="username" placeholder="Your Username" />
+      </div>
 
-      <label for="input-password">Password</label>
-      <input type="password" id="input-password" name="password" placeholder="********" />
+      <div>
+         <label for="input-password">Password</label>
+         <input type="password" id="input-password" name="password" placeholder="********" />
+      </div>
 
       <button type="Submit">Login</button>
 
@@ -13,4 +17,5 @@
       <p class="error">{{errorMessage}}</p>
       {{/if}}
    </form>
+   <a href="/signup">Not a user yet? Sign Up</a>
 </div>
