--- a/views/deck/receptive.hbs
+++ b/views/deck/receptive.hbs
@@ -26,8 +26,8 @@
   </ul>
 
   <nav class="training-navigation">
-    <a href="/decks">
-      <p class="decks-text">Decks</p>
+    <a class="decks-button" href="/decks">
+      <p>Decks</p>
     </a>
     <div class="next-button">
       <p>Next</p>
